[package]
name = "pmcp-server"
version = "0.2.1"
edition = "2021"
authors = ["PMCP SDK Contributors"]
description = "PMCP SDK developer tools MCP server - protocol testing, scaffolding, schema export, and documentation"
license = "MIT"
repository = "https://github.com/paiml/rust-mcp-sdk"
keywords = ["mcp", "developer-tools", "testing", "scaffolding", "sdk"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "pmcp_server"
path = "src/lib.rs"

[[bin]]
name = "pmcp-server"
path = "src/main.rs"

[dependencies]
pmcp = { version = "2.0.2", path = "../../", features = ["streamable-http"] }
mcp-tester = { version = "0.4.1", path = "../mcp-tester" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[package.metadata.binstall]
pkg-url = "https://github.com/paiml/rust-mcp-sdk/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
pkg-fmt = "bin"
