[package]
name = "pmcp-toolkit-mysql"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/rust-mcp-sdk"
description = "MySQL connector for pmcp-server-toolkit (config-driven MCP servers)"
keywords = ["mcp", "mysql", "sql", "toolkit"]
categories = ["development-tools", "database"]

# Why: keeps the published artifact under the 10MB crates.io limit (mirrors
# pmcp-server-toolkit). `tests/` carries the in-process mock; `.planning/`,
# `.pmat/`, `fixtures/`, and `fuzz/` are never relevant to downstream consumers.
exclude = [".planning/", ".pmat/", "fixtures/", "tests/", "fuzz/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
# Why (REVIEWS H5): exposes the in-process `MysqlMock` (in `src/dev_mock.rs`)
# to publishable example targets + downstream integration tests without leaking
# it into the default publish surface. Not enabled by default.
dev_mock = []

[dependencies]
pmcp-server-toolkit = { version = "0.1.0", path = "../pmcp-server-toolkit" }
# Why: pure-Rust MySQL driver (not C bindings) for Lambda deployability.
# `tls-rustls-aws-lc-rs` keeps the rustls 0.23/aws-lc-rs path (RUSTSEC-safe).
sqlx = { version = "0.9.0", default-features = false, features = ["mysql", "runtime-tokio", "tls-rustls-aws-lc-rs"] }
tokio = { version = "1", default-features = false, features = ["rt"] }
async-trait = "0.1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
proptest = "1.7"
# Why: tests run with --test-threads=1 per CLAUDE.md — single-threaded tokio is sufficient.
tokio = { version = "1", features = ["macros", "rt"] }

[[example]]
name = "mysql_minimal"
required-features = ["dev_mock"]
